--- a/external.html
+++ b/external.html
@@ -3,23 +3,79 @@
 <head>
 	<title>External Stylee Sheet</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/fontawesome.css">
+	<link rel="stylesheet" type="text/css" href="css/solid.css">
+	<link rel="stylesheet" type="text/css" href="css/regular.css">
+	<link rel="stylesheet" type="text/css" href="css/brands.css">
 </head>
 <body>
+	<div class="social">
+		
+		<i class="fab fa-facebook-f"></i>
+	</div>
 <div class="container">
-	<h1 class="myheading">Welcome to the Site</h1>
+	<div class="row">
+		<div class="col100 banner">Banner</div>
+	</div>
+	<div class="row">
+		<div class="col100">Menu</div>
+	</div>
+	<div class="row">
+		<div class="col50">
+			<img src="images/slider.jpg" alt="slider" title="slider" />
+		</div>
+		<div class="col50 highlight">
+			<div class="row">
+				<h2>My heading goes here</h2>
+				<div class="col25">
+					<img src="images/highlight.jpg" alt="Highlight" title="highlight"/>
+				</div>
+				<div class="col75">
+					<p>This is the demo short description of the txt.
+				</div>
+			</div>
+			<div class="clear"></div>
+			<div class="row">
+				<h2>My heading goes here</h2>
+				<div class="col25">
+					<img src="images/highlight.jpg" alt="Highlight" title="highlight"/>
+				</div>
+				<div class="col75">
+					<p>This is the demo short description of the txt.
+				</div>
+			</div>
+			<div class="clear"></div>
+			<div class="row">
+				<h2>My heading goes here</h2>
+				<div class="col25">
+					<img src="images/highlight.jpg" alt="Highlight" title="highlight"/>
+				</div>
+				<div class="col75">
+					<p>This is the demo short description of the txt.
+				</div>
+			</div>
 
-<div class="row">
-	<div class="box">
+
+		</div>
 	</div>
-	<div class="box">
+	<div class="clear"></div>
+	<div class="row">
+		<div class="col25">Column1</div>
+		<div class="col25">Column2</div>
+		<div class="col25">Column3</div>
+		<div class="col25">Column4</div>
 	</div>
-	<div class="box">
+	<div class="row">
+		<div class="col75">Entertainment</div>
+		<div class="col25">Heading</div>
 	</div>
-	<div class="box">
+	<div class="clear"></div>
+	<div class="row">
+		<div class="col100">&copy; 2018, All right Reserved.</div>
 	</div>
-	
+
 </div>
 
-</div>
+<script src="js/fontawesome.js"></script>
 </body>
 </html>
