--- a/index.html
+++ b/index.html
@@ -1,214 +1,133 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>First Page</title>
-	<meta charset="utf-8" />
-	<meta name="author" content="Your Name" />
-	<!-- Embedded Style-->
-	<style>
-	/* Embedded Style*/
-
-	/*
-
-	selectrolist{
-	property:value;
-		.
-		.
-		.
-	}
-	*/
-/* Tag type Selector*/
-	body{
-		background-image:url('images/bg.jpg');
-		margin:0px;
-		color:#ccddcc !important;
-	}
-
-	/* ID SElector*/
-	#wrapper{
-		width:960px;
-		min-height:1000px;
-		background-color:#ffffff;
-		border-right: 3px solid #ff0000; 
-		border-left: 3px solid #ff0000;
-		margin:auto auto; 
-	}
-/* Class Selector*/
-	.myheading{
-		font-size:30px;
-		font-weight:bolder;
-		font-variant:small-caps;
-		text-decoration: overline;
-	}
-	</style>
+	<title>External Stylee Sheet</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/fontawesome.css">
+	<link rel="stylesheet" type="text/css" href="css/solid.css">
+	<link rel="stylesheet" type="text/css" href="css/regular.css">
+	<link rel="stylesheet" type="text/css" href="css/brands.css">
+	<meta name="viewport" content="width=device-width; initial-scale=1.0" />
 </head>
-<body style="margin:0px; background-color:#000000; color:#ffffff">
-	
-<div id="wrapper">
-	<h1 class="myheading">Welcome to the Site</h1>
+<body>
+	<div class="social">
+		
+		<i class="fab fa-facebook"></i>
+		<i class="fab fa-youtube"></i>
+		<i class="fab fa-twitter"></i>
+		<i class="fab fa-linkedin"></i>
+
+
+	</div>
+<div class="container">
+<div class="bannermenufix">
+	<div class="row">
+		<div class="col100 banner">Banner</div>
+	</div>
+	<div class="row">
+		<div class="col100 menu">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Downloads</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+
+		</div>
+	</div>
+</div><!-- bannermenufix close-->
+<div class="scrollable">
+	<div class="row">
+		<div class="col50">
+			<img src="images/slider.jpg" alt="slider" title="slider" />
+		</div>
+		<div class="col50 highlight">
+			<div class="row">
+				<h2>My heading goes here</h2>
+				<div class="col25">
+					<img src="images/highlight.jpg" alt="Highlight" title="highlight"/>
+				</div>
+				<div class="col75">
+					<p>This is the demo short description of the txt.
+				</div>
+			</div>
+			<div class="clear"></div>
+			<div class="row">
+				<h2>My heading goes here</h2>
+				<div class="col25">
+					<img src="images/highlight.jpg" alt="Highlight" title="highlight"/>
+				</div>
+				<div class="col75">
+					<p>This is the demo short description of the txt.
+				</div>
+			</div>
+			<div class="clear"></div>
+			<div class="row">
+				<h2>My heading goes here</h2>
+				<div class="col25">
+					<img src="images/highlight.jpg" alt="Highlight" title="highlight"/>
+				</div>
+				<div class="col75">
+					<p>This is the demo short description of the txt.
+				</div>
+			</div>
+
+
+		</div>
+	</div>
+	<div class="clear"></div>
+	<div class="row">
+		<div class="col25">
+			<h2>Column Heading</h2>
+			<img src="images/col.jpg" alt="My Column" title="My Column" />
+			<p>This is the demo text for my column heading....
+			</p>
+
+		</div>
+		<div class="col25">
+			
+<h2>Column Heading</h2>
+			<img src="images/col.jpg" alt="My Column" title="My Column" />
+			<p>This is the demo text for my column heading....
+			</p>
+
+		</div>
+		<div class="col25">
+			<h2>Column Heading</h2>
+			<img src="images/col.jpg" alt="My Column" title="My Column" />
+			<p>This is the demo text for my column heading....
+			</p>
+
+		</div>
+		<div class="col25"><h2>Column Heading</h2>
+			<img src="images/col.jpg" alt="My Column" title="My Column" />
+			<p>This is the demo text for my column heading....
+			</p></div>
+	</div>
+	<div class="row">
+		<div class="col75">
+			<img src="images/entertainment.jpg" alt="entertainment" title="Entertainment" />
+
+
+		</div>
+		<div class="col25"><h2>Heading Text</h2>
+			<p> This is the demo text for my heading text. you can write the Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur.
+				
+
+			</p></div>
+	</div>
+	<div class="clear"></div>
+	<div class="row">
+		<div class="col100">&copy; 2018, All right Reserved.</div>
+	</div>
+</div><!-- Scrollable close-->
+
 </div>
 
-	<a name="top">
-	Hi this me.
-
-	<hr/>
-	<!-- 
-	<a> Anchor Name   </a>
-	Attributes
-	href="path"
-	title="Title of the Link"
-	name="some name"
-	target="_blank/_parent/_self"
-
-	-->
-
-	<a href="index.html" title="Home">Home</a>
-	<a href="about.html" title="Home">About</a>
-	<a href="contact.html" title="Home">Contact</a>
-
-	<a href="https://developer.mozilla.org/en-US/" target="_blank">Mozilla</a>
-
-	<a href="mailto:dharma@bitsi.com.np?subject='Message from Site'">Email Us</a>
-
-
-	<hr/>
-	<h1 align="center">Welcome to the Site</h1>
-	<blockquote><blockquote><p align="justify" style="font-size:20px; font-weight:bolder; font-variant:small-caps; border-bottom:3px solid #ff0000;">Hello this is <b>my paragraph</b>. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my graph. <i>Hello </i>this is my paragraph. <em>Hello</em> this is my paragraph. Hello this is my  graph. Hello this is my <s>paragraph</s>. Hello this is my paragraph. Hello this is my  graph. Hello this is my <del>paragraph. </del>Hello this is my paragraph. 
-		<br/>Hello this is my  graph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my  graph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my  graph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my graph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. 
-	</p></blockquote></blockquote>
-
-<hr/>
-	<p align="right">Hello this is <b>my paragraph</b>. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my graph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my  graph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my  graph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my  graph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my  graph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my  graph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my graph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. Hello this is my paragraph. 
-	</p>
-	<h3>SuperScript</h3>
-	(A+B)<sup>2</sup>=A<sup>2</sup>+2AB+B<sup>2</sup>
-
-<a name="wmf">
-	<h2>Water Molecular Formula</h2>
-	H<sub>2</sub>O
-
-	<hr>
-	<h1>Order list</h1>
-	<h3>Name of the Countires</h3>
-	<!-- Attribuest of OL
-		1. type="1/A/a/i/I"
-		2. start="4"
-
-	-->
-	<ol type="A" start=4>
-		<li>Nepal</li>
-		<li>India</li>
-		<li>Pakistan</li>
-		<li>Afganisthan</li>
-	</ol>
-
-	<!-- Generate the following OUtput
-
-		E Nepal
-		  i Kathmandu
-		    a Baneshwor
-		    b Thapathali
-		    c Sundhara
-		  ii Lalitpur
-		    a Kumaripati
-		F India
-		G Pakistan
-
-	-->
-
-	<ol type="A" start="5">
-		<li>Nepal
-			<ol type="i">
-				<li>Kathmandu
-					<ol type="a">
-						<li>Baneshowr</li>
-						<li>Thapathali</li>
-						<li>Sundahra</li>
-
-					</ol>
-				</li>
-				<li>Lalitpur
-					<ol type="a">
-						<li>Kumaripati</li>
-					</ol>
-				</li>
-			</ol>
-		</li>
-		<li>India</li>
-		<li>Pakistan
-	</ol>
-
-
-	<!-- Unorder List-->
-	<!-- Attributes
-
-		# type= "disc/circle/square"
-
-	-->
-	<ul>
-		<li>Mouse</li>
-		<li>Keyboard</li>
-		<li>Joystick</li>
-		<li>MICR</li>
-		<li>OCR</li>
-	</ul>
-
-
-	<!-- Defination List
-
-		<dl>
-			<dt>  </dt>
-				<dd>   </dd>
-			<dt>   <dt>
-				<dd>  <dd>
-		</dl>
-DL - Defination List
-dt - Definatil Title
-dd - defination data
-	-->
-
-	<dl>
-		<dt>Computer</dt>
-		<dd>A computer is an electronic devices....</dd>
-		<dt> Mouse</dt>
-		<dd>A mouse is an pointing device....</dd>
-	</dl>
-
-
-<!-- Inserting Graphics-->
-  <!-- 
-
-  	<img />
-  	Attributes
-
-  	1. src ="path filename.ext"
-  	2. width =" px or %"
-  	3. Height
-  	4. alt ="Alternative Text"
-  	5. title= "Title of the Image"
-  	6. align="left/right"
-  	7. hsapce="1px"
-  	8. vspace="3px"
-  	9. border="0px"
-  	10. bordercolor="#cccccc"
--->
-<p>
-<img src="images/col.jpg" alt="Nepal Airlines" title="Nepal Airlines" align="right" hspace="10px" vspace="10px" />
-
-This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. This is my demo text. 
-</p>
-
-<br/>
-<hr/>
-<p align="right"><a href="index.html#top">^TOP</a>
-
-<a href="#wmf">WMF</a></p>
-
-
-
-
-
-
-
+<script src="js/fontawesome.js"></script>
 </body>
-</html> 
+</html>
